{
    "name": "UserInputs",
    "maps": [
        {
            "name": "Keyboard",
            "id": "7827b0e3-9066-4555-a9d9-a12d1c06dadb",
            "actions": [
                {
                    "name": "MoveKeys",
                    "type": "Value",
                    "id": "2c1d897d-c6ca-4b91-b061-840aba0c2c20",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Move",
                    "id": "148d717a-cda8-427a-ba40-2d73dbed1e47",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeys",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "de71a7e0-77e1-4118-9c72-87d1ef6b7673",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c59526b2-6070-43f4-be8a-188710479b88",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b82edb51-f0d1-4030-9693-6f57845a93c7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "880f6827-00d3-4d7c-a5ff-1af608b74dab",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "6d090fe6-2110-47c1-a3fa-e5a25835e777",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "eeddbc36-967d-4996-9a83-68f3af94af76",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPositionDelta",
                    "type": "Value",
                    "id": "24a144f5-132a-4890-a0c2-799d72983093",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryButton",
                    "type": "Button",
                    "id": "26026e0a-d0c5-41d9-8c2e-56df7e0b466e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButton",
                    "type": "Button",
                    "id": "262f2101-22bd-4480-a17c-dd5a156a4e9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleButton",
                    "type": "Button",
                    "id": "e9d2a939-1b24-4f88-942e-9a0538e18bda",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fb7515ba-f910-453f-9a50-a97ce6df793c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04116c3b-604b-45e2-acf3-a5358707bd10",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "PointerPositionDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41fa5a80-9199-480e-8a83-082ca5498804",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "PrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d42c3cc-1eb2-4bed-aa8c-287b4c84d67d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "SecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd55c067-9e11-48f7-b00f-7a9d8acf03d3",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "MiddleButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Touch",
            "id": "f31d8c43-9ab8-4345-9727-67c048c8aca9",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "e41bd1f3-8964-49b0-86b2-56a6850dc633",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e9f9c33-62c2-44aa-9129-e706ec348005",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Input",
            "bindingGroup": "Input",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}